fix some spacing issues on the homepage

--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -65,8 +65,10 @@ main > ul > li {
 }
 
 ul.group {
-	display: flex;
-	justify-content: space-between;
+	display: grid;
+	grid-template-rows: 1fr;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-gap: 3vw;
 }
 
 ul.group li {
